--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,12 @@ edition = "2021"
 anyhow = "1.0.75"
 clap = { version = "4.4.11", features = ["derive"] }
 console = "0.15.7"
+http = "1.0.0"
+http-serde = "2.0.0"
 reqwest = { version = "0.11.22", default-features = false, features = ["rustls"] }
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
 serde_yaml = "0.9.27"
 similar = { version = "2.3.0", features = ["bytes", "inline"] }
 tokio = { version = "1.35.0", features = ["full"] }
+url = { version = "2.5.0", features = ["serde"] }
