--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ anyhow = "1.0.75"
 clap = { version = "4.4.11", features = ["derive"] }
 console = "0.15.7"
 http-serde = "1.1.3"
-reqwest = { version = "0.11.22", default-features = false, features = ["rustls"] }
+reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
 serde_yaml = "0.9.27"
