--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ http-serde = "1.1.3"
 reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
+serde_urlencoded = "0.7.1"
 serde_yaml = "0.9.27"
 similar = { version = "2.3.0", features = ["bytes", "inline"] }
 tokio = { version = "1.35.0", features = ["full"] }
