--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.75"
 clap = { version = "4.4.11", features = ["derive"] }
 console = "0.15.7"
+dialoguer = "0.11.0"
 http-serde = "1.1.3"
 reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls"] }
 serde = { version = "1.0.193", features = ["derive"] }
