--- a/fixtures/xreq.yml
+++ b/fixtures/xreq.yml
@@ -1,12 +1,8 @@
 todo:
-  request1:
+  request:
     url: https://jsonplaceholder.typicode.com/todos/1
     params:
       a: 100
-  request2:
-    url: https://jsonplaceholder.typicode.com/todos/2
-    params:
-      c: 200
   response:
     skip_headers:
       - report-to
