--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ path = "src/bin/xreq.rs"
 [dependencies]
 anyhow = "1.0.75"
 async-trait = "0.1.75"
+atty = "0.2.14"
 clap = { version = "4.4.11", features = ["derive"] }
 console = "0.15.7"
 dialoguer = "0.11.0"
